k8s-config/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 134428267718.dkr.ecr.us-east-1.amazonaws.com/frontend:latest
          ports:
            - containerPort: 3000
          resources:
            # requests:
            #   memory: '1Gi'
            #   cpu: '500m'
            limits:
              memory: '2Gi'
              cpu: '1000m'
