k8s-config/llm_service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: llm-service
  template:
    metadata:
      labels:
        app: llm-service
    spec:
      containers:
        - name: llm-service
          image: 134428267718.dkr.ecr.us-east-1.amazonaws.com/llm_service:latest
          # ports:
          #   - containerPort: 9092
          # resources:
          #   limits:
          #     memory: '512Mi'
          #     cpu: '500m'
          #   requests:
          #     memory: '256Mi'
          #     cpu: '250m'
