k8s-config/zookeeper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
# metadata:
#   labels:
#     app: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:latest
          ports:
            - containerPort: 2181
          resources:
            limits:
              memory: '512Mi'
              cpu: '500m'
          #   requests:
          #     memory: '256Mi'
          #     cpu: '250m'
