k8s-config/llm_service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm-service
spec:
  type: ClusterIP
  ports:
    - port: 9093
      targetPort: 9093
  selector:
    app: llm-service
