k8s-config/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
spec:
  type: ClusterIP
  ports:
    - port: 2181
      targetPort: 2181
      name: zookeeper
  selector:
    app: zookeeper
